<resources>
    <string name="app_name">Student Course Booking App</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>

    <string name="course_options">Course options</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_accounts">Delete accounts</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="create_a_new_instructor_account">Create a new instructor account</string>
    <string name="create_a_new_student_account">Create a new student account</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="add_course">Add Course</string>
    <string name="view_courses">View Courses</string>
    <string name="edit_Assigned_Course">Edit Course</string>
    <string name="unassign_Course">Unassign Course</string>
    <string name="assign_Course">Assign Course</string>
    <string name="search_Course">Search Coiurse</string>
</resources>