<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminHome"
    android:background="@drawable/background3">

    <TextView
        android:id="@+id/courseOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_options"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <LinearLayout
        android:id="@+id/courseButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/createCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#3B000000"
            android:text="@string/create"
            android:textColor="@color/white"

            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/editCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#3B000000"
            android:text="@string/edit"
            android:textColor="@color/white"

            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/deleteCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#3B000000"
            android:text="@string/delete"
            tools:layout_editor_absoluteX="294dp"
            tools:layout_editor_absoluteY="312dp" />
    </LinearLayout>

    <Button
        android:id="@+id/deleteAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#3B000000"
        android:text="@string/delete_accounts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

</androidx.constraintlayout.widget.ConstraintLayout>