<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructorAccountCreator">

    <TextView
        android:id="@+id/CreateInstructorAccountTxt"
        android:layout_width="208dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="571dp"
        android:text="@string/create_a_new_instructor_account" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="392dp"
        android:ems="10"

        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginTop="386dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="300dp"
        android:ems="10"

        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="481dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="205dp"
        android:ems="10"

        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <LinearLayout
        android:id="@+id/nameTexts"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="451dp">

        <EditText
            android:id="@+id/firstNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"

            android:inputType="textPersonName"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:ems="10"

            android:inputType="textPersonName"
            android:hint="@string/last_name" />
    </LinearLayout>

</RelativeLayout>