<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructorHome"
    android:background="@drawable/background3">

    <Button
        android:id="@+id/viewCourses"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="71dp"

        android:layout_marginEnd="20dp"
        android:layout_marginBottom="609dp"
        android:layout_weight="1"
        android:backgroundTint="#3B000000"
        android:text="@string/view_courses"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="312dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editAssignedCourse"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="146dp"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="534dp"
            android:layout_weight="1"
            android:backgroundTint="#3B000000"
            android:text="@string/edit_Assigned_Course"
            android:textColor="@color/white"
            android:textSize="13dp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="312dp" />

        <Button
            android:id="@+id/unassignCourse"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="146dp"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="534dp"
            android:layout_weight="1"
            android:backgroundTint="#3B000000"
            android:text="@string/unassign_Course"
            android:textSize="13dp"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="312dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/assignedCourseList"

        android:layout_width="380dp"
        android:layout_height="498dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="#6BFFFFFF" />

    <TextView
        android:id="@+id/INSTRUCTOR"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="283dp"
        android:layout_marginBottom="685dp"
        android:text="INSTRUCTOR"
        android:textColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ASSIGNED_COURSES"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:text="Assigned Courses:"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>